src/tui/snapshots/herald__tui__main_area__tests__main_area_empty_large.snap
---
source: src/tui/main_area.rs
expression: output
---
┌ herald ──────────────────────────────────────────────────┐
│                                                          │
│                                                          │
│                                                          │
│                                                          │
│                                                          │
│                                                          │
│                                                          │
│                                                          │
│                                                          │
│                                                          │
│                                                          │
│            Press 'n' to create a new session             │
│                                                          │
│                                                          │
│                                                          │
│                                                          │
│                                                          │
│                                                          │
│                                                          │
│                                                          │
│                                                          │
│                                                          │
└──────────────────────────────────────────────────────────┘
