src/tui/snapshots/herald__tui__main_area__tests__main_area_scroll_indicator.snap
---
source: src/tui/main_area.rs
expression: output
---
┌ test-session [+42 lines] ────────────────────────────────┐
│scrolled content                                          │
│                                                          │
│                                                          │
│                                                          │
│                                                          │
│                                                          │
│                                                          │
│                                                          │
└──────────────────────────────────────────────────────────┘
