src/tui/snapshots/herald__tui__main_area__tests__main_area_with_plain_text.snap
---
source: src/tui/main_area.rs
expression: output
---
┌ test-session ────────────────────────────────────────────┐
│hello world                                               │
│line 2                                                    │
│line 3                                                    │
│                                                          │
│                                                          │
│                                                          │
│                                                          │
│                                                          │
└──────────────────────────────────────────────────────────┘
